fix: fix button and scrollbar

--- a/src/pages/main-page/components/main-teachers/components/teachers-item/components/teacher-item/teacher-item.module.scss
+++ b/src/pages/main-page/components/main-teachers/components/teachers-item/components/teacher-item/teacher-item.module.scss
@@ -21,6 +21,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    flex-grow: 1;
 
     .name {
       font-size: 24px;
@@ -43,6 +44,10 @@
 
 @media (max-width: 768px) {
   .teacherItem {
+    .img {
+      height: 306px;
+    }
+
     .info {
       .name {
         font-size: 20px;
